--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "krampui"
-version = "1.1.5"
-authors = ["BitdancerStudios"]
+version = "1.1.6"
+authors = ["Snipcola"]
 license = "MIT"
 edition = "2021"
 
@@ -12,15 +12,11 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = [ "system-tray", "api-all"] }
 tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 serde = { version = "1", features = ["derive"] }
-reqwest = { version = "0.12.2", features = ["json"] }
 sysinfo = "0.30.7"
-serde_json = "1"
 rdev = "0.5.3"
 ws = "0.9.2"
 lazy_static = "1.4.0"
 colored = "2.1.0"
-win-msgbox = "0.1.3"
-open = "5.1.2"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
 
 [features]
